--- a/index.html
+++ b/index.html
@@ -13,7 +13,27 @@
 </head>
 
 <body>
+    <section class="bg-[#1A0B2E] text-white">
+        <nav class="flex items-center justify-between max-w-[1200px] w-[75%] mx-auto">
+            <h1 class="text-white text-4xl max-sm:text-2xl font-bold my-[15px]">
+                Tech<span
+                    class="text-transparent bg-clip-text bg-gradient-to-br from-[#F7E93F] via-[#FB09B4] to-[#9100F8]">Wave</span>
+            </h1>
 
+            <ul class="flex gap-[32px] max-sm:hidden">
+                <li><a href="#">About</a></li>
+                <li><a href="#">Episodes</a></li>
+                <li><a href="#">Host</a></li>
+            </ul>
+
+            <div>
+                <button
+                    class="border-none max-sm:hidden rounded-3xl px-4 py-2 bg-gradient-to-br from-[#F7E93F] via-[#FB09B4] to-[#9100F8]">Subscribe
+                    <i class="fa-solid fa-arrow-right"></i>
+                </button>
+            </div>
+        </nav>
+    </section>
 </body>
 
 </html>
