--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
         integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./style.css">
     <title>Tech Wave</title>
 </head>
 
 <body>
     <section class="bg-[#1A0B2E] text-white">
         <nav class="flex items-center justify-between max-w-[1200px] w-[75%] mx-auto">
-            <h1 class="text-white text-4xl max-sm:text-2xl font-bold my-[15px]">
+            <h1 class="text-white text-4xl max-sm:text-2xl font-semibold my-[15px]">
                 Tech<span
                     class="text-transparent bg-clip-text bg-gradient-to-br from-[#F7E93F] via-[#FB09B4] to-[#9100F8]">Wave</span>
             </h1>
@@ -27,12 +28,25 @@
             </ul>
 
             <div>
-                <button
-                    class="border-none max-sm:hidden rounded-3xl px-4 py-2 bg-gradient-to-br from-[#F7E93F] via-[#FB09B4] to-[#9100F8]">Subscribe
+                <button class="border-none max-sm:hidden btn">Subscribe
                     <i class="fa-solid fa-arrow-right"></i>
                 </button>
             </div>
         </nav>
+    </section>
+    <section class="hero-container mx-auto text-center text-white">
+        <div class="hero-content">
+            <div class="mx-auto mic-div">
+                <img class="mic-img" src="./assets/microphone.png" alt="">
+            </div>
+            <h1 class="hero-header font-extrabold">TechWave</h1>
+            <p class="pb-[24px]">Your daily dose of tech insights, productivity hacks, and personal growth</p>
+            <div class="flex gap-2 justify-center items-center">
+                <button class="btn"><i class="fa-brands fa-spotify font-semibold"></i> Listen on Spotify</button>
+                <button class="border-green-400 border rounded-3xl px-[16px] py-[4px] text-green-400 font-semibold"><i
+                        class="fa-regular fa-envelope"></i> Subscribe</button>
+            </div>
+        </div>
     </section>
 </body>
 
