--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
     <section class="hero-container mx-auto text-center text-white">
         <div class="hero-content">
             <div class="mx-auto mic-div">
+                <div class="new-animation">
+                    NEW
+                </div>
                 <img class="mic-img" src="./assets/microphone.png" alt="">
             </div>
             <h1 class="hero-header font-extrabold">TechWave</h1>
