--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
                 <li><a href="#">Host</a></li>
             </ul>
             <button>Subscribe <i class="fa-solid fa-arrow-right"></i></button>
+            <div class="hamburger-menu">
+                <img src="./assets/hamburger-menu.png" alt="hamburger-menu">
+            </div>
         </nav>
         </div>
     </section>
