Adding hero bg img

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
         integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
-        <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css">
     <title>TechWave</title>
 </head>
 
@@ -15,22 +15,53 @@
     <section>
         <div class="section">
             <nav class="navbar">
-            <div>
-                <h1 class="nav-header">
-                    Tech<span class="gradiant-color">Wave</span>
-                </h1>
-            </div>
-            <ul>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Episodes</a></li>
-                <li><a href="#">Host</a></li>
-            </ul>
-            <button>Subscribe <i class="fa-solid fa-arrow-right"></i></button>
-            <div class="hamburger-menu">
-                <img src="./assets/hamburger-menu.png" alt="hamburger-menu">
-            </div>
-        </nav>
+                <div>
+                    <h1 class="nav-header">
+                        Tech<span class="gradiant-color">Wave</span>
+                    </h1>
+                </div>
+                <ul>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Episodes</a></li>
+                    <li><a href="#">Host</a></li>
+                </ul>
+                <button class="btn">Subscribe <i class="fa-solid fa-arrow-right"></i></button>
+                <div class="hamburger-menu">
+                    <img src="./assets/hamburger-menu.png" alt="hamburger-menu">
+                </div>
+            </nav>
         </div>
+    </section>
+    <section class="hero-container">
+
+
+
+
+
+
+
+
+
+        <div class="hero-content">
+            <div class="mic-box btn">
+                <img src="./assets/microphone.png" alt="">
+            </div>
+            <h1>TechWave</h1>
+            <p>Your daily dose of tech insights, productivity hacks, and personal growth</p>
+            <div class="hero-buttons">
+                <button class="btn">
+                    <i class="fa-brands fa-spotify"></i> Listen on Spotify
+                </button>
+                <button class="snd-button">
+                    <i class="fa-regular fa-envelope"></i> Subscribe
+                </button>
+            </div>
+        </div>
+
+
+
+
+
     </section>
 </body>
 
