Adding About section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body class="white-color">
-    <section>
+    <section class="bg-color-2 frst-section">
         <div class="section">
             <nav class="navbar">
                 <div>
@@ -33,15 +33,6 @@
         </div>
     </section>
     <section class="hero-container">
-
-
-
-
-
-
-
-
-
         <div class="hero-content">
             <div class="mic-box btn">
                 <img src="./assets/microphone.png" alt="">
@@ -57,11 +48,46 @@
                 </button>
             </div>
         </div>
+    </section>
+    <section class="bg-color-2 about">
+        <div class="width-1200">
+            <div class="about-container">
+                <h1>About the Podcast</h1>
+                <p>TechWave is your go-to podcast for staying ahead in the fast-paced world of technology. <br>
+                    We break down complex topics into digestible insights, explore productivity strategies that actually
+                    work,<br>
+                    and share stories of personal growth from industry leaders.
+                    <br><br>
+                    Join thousands of young professionals and tech enthusiasts who start their day with TechWave.
+                </p>
+            </div>
+
+            <hr class="hr">
 
 
+            <div class="card-box">
 
+                <div class="card">
+                    <h1>150K+</h1>
+                    <p>Monthly Listeners</p>
+                </div>
+                <div class="card">
+                    <h1>150K+</h1>
+                    <p>Monthly Listeners</p>
+                </div>
+                <div class="card">
+                    <h1>150K+</h1>
+                    <p>Monthly Listeners</p>
+                </div>
+                <div class="card">
+                    <h1>150K+</h1>
+                    <p>Monthly Listeners</p>
+                </div>
 
+            </div>
 
+            
+        </div>
     </section>
 </body>
 
