--- a/index.html
+++ b/index.html
@@ -61,32 +61,72 @@
                     Join thousands of young professionals and tech enthusiasts who start their day with TechWave.
                 </p>
             </div>
-
             <hr class="hr">
-
-
             <div class="card-box">
+                <div class="card">
+                    <h1>150K+</h1>
+                    <p>Monthly Listeners</p>
+                </div>
+                <div class="card">
+                    <h1>200+</h1>
+                    <p>Episodes Published</p>
+                </div>
+                <div class="card">
+                    <h1>4.9★</h1>
+                    <p>Average Rating</p>
+                </div>
+                <div class="card">
+                    <h1>50+</h1>
+                    <p>Industry Experts</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
-                <div class="card">
-                    <h1>150K+</h1>
-                    <p>Monthly Listeners</p>
-                </div>
-                <div class="card">
-                    <h1>150K+</h1>
-                    <p>Monthly Listeners</p>
-                </div>
-                <div class="card">
-                    <h1>150K+</h1>
-                    <p>Monthly Listeners</p>
-                </div>
-                <div class="card">
-                    <h1>150K+</h1>
-                    <p>Monthly Listeners</p>
-                </div>
+    <section class="trd-section"">
+        <div class=" trd-container">
+        <h1 class="feature-header">Why Choose TechWave</h1>
+        <div class="grid-cards">
 
+
+
+            <div class="grid-card audio" style="grid-area: box-1;">
+                <img src="./assets/headphone.png" alt="">
+                <h2>Premium Audio Quality</h2>
+                <p>Listen on the go with seamless mobile experience and offline downloads.</p>
             </div>
 
-            
+
+
+            <div class="grid-card" style="grid-area: box-2;">
+                <img src="./assets/device.png" alt="">
+                <h2>Mobile Friendly</h2>
+                <p>Experience crystal-clear sound with professional-grade recording equipment and expert audio
+                    engineering. Every episode is mastered for optimal listening across all devices and platforms.</p>
+            </div>
+
+
+            <div class="grid-card" style="grid-area: box-3;">
+                <img src="./assets/location.png" alt="">
+                <h2>Global Community</h2>
+                <p>Connect with tech enthusiasts from over 120 countries worldwide.</p>
+            </div>
+
+            <div class=" grid-card" style="grid-area: box-4;">
+                <img src="./assets/exculsive.png" alt="">
+                <h2>Exclusive Interviews</h2>
+                <p>Get unprecedented access to industry titans, startup founders, and tech visionaries. Our host secures
+                    exclusive conversations you won't find anywhere else, diving deep into their journeys, failures, and
+                    success strategies.</p>
+            </div>
+
+            <div class="grid-card" style="grid-area: box-5;">
+                <img src="./assets/resource.png" alt="">
+                <h2>Rich Resources</h2>
+                <p>Access show notes, transcripts, and additional learning materials for every episode.</p>
+            </div>
+
+        </div>
         </div>
     </section>
 </body>
