--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <section class="hero-container">
         <div class="hero-content">
             <div class="mic-box btn">
-                <img src="./assets/microphone.png" alt="">
+                <img src="./assets/microphone.png" alt="MicroPhone">
             </div>
             <h1>TechWave</h1>
             <p>Your daily dose of tech insights, productivity hacks, and personal growth</p>
@@ -91,7 +91,7 @@
 
 
             <div class="grid-card audio" style="grid-area: box-1;">
-                <img src="./assets/headphone.png" alt="">
+                <img src="./assets/headphone.png" alt="HeadPhone">
                 <h2>Premium Audio Quality</h2>
                 <p>Listen on the go with seamless mobile experience and offline downloads.</p>
             </div>
@@ -99,7 +99,7 @@
 
 
             <div class="grid-card" style="grid-area: box-2;">
-                <img src="./assets/device.png" alt="">
+                <img src="./assets/device.png" alt="MobileDevice">
                 <h2>Mobile Friendly</h2>
                 <p>Experience crystal-clear sound with professional-grade recording equipment and expert audio
                     engineering. Every episode is mastered for optimal listening across all devices and platforms.</p>
@@ -107,13 +107,13 @@
 
 
             <div class="grid-card" style="grid-area: box-3;">
-                <img src="./assets/location.png" alt="">
+                <img src="./assets/location.png" alt="Location">
                 <h2>Global Community</h2>
                 <p>Connect with tech enthusiasts from over 120 countries worldwide.</p>
             </div>
 
             <div class=" grid-card" style="grid-area: box-4;">
-                <img src="./assets/exculsive.png" alt="">
+                <img src="./assets/exculsive.png" alt="Exuclusive">
                 <h2>Exclusive Interviews</h2>
                 <p>Get unprecedented access to industry titans, startup founders, and tech visionaries. Our host secures
                     exclusive conversations you won't find anywhere else, diving deep into their journeys, failures, and
@@ -121,7 +121,7 @@
             </div>
 
             <div class="grid-card" style="grid-area: box-5;">
-                <img src="./assets/resource.png" alt="">
+                <img src="./assets/resource.png" alt="Resourse">
                 <h2>Rich Resources</h2>
                 <p>Access show notes, transcripts, and additional learning materials for every episode.</p>
             </div>
