--- a/index.html
+++ b/index.html
@@ -82,22 +82,15 @@
             </div>
         </div>
     </section>
-
     <section class="trd-section"">
         <div class=" trd-container">
         <h1 class="feature-header">Why Choose TechWave</h1>
         <div class="grid-cards">
-
-
-
             <div class="grid-card audio" style="grid-area: box-1;">
                 <img src="./assets/headphone.png" alt="HeadPhone">
                 <h2>Premium Audio Quality</h2>
                 <p>Listen on the go with seamless mobile experience and offline downloads.</p>
             </div>
-
-
-
             <div class="grid-card" style="grid-area: box-2;">
                 <img src="./assets/device.png" alt="MobileDevice">
                 <h2>Mobile Friendly</h2>
@@ -105,13 +98,11 @@
                     engineering. Every episode is mastered for optimal listening across all devices and platforms.</p>
             </div>
 
-
             <div class="grid-card" style="grid-area: box-3;">
                 <img src="./assets/location.png" alt="Location">
                 <h2>Global Community</h2>
                 <p>Connect with tech enthusiasts from over 120 countries worldwide.</p>
             </div>
-
             <div class=" grid-card" style="grid-area: box-4;">
                 <img src="./assets/exculsive.png" alt="Exuclusive">
                 <h2>Exclusive Interviews</h2>
@@ -119,7 +110,6 @@
                     exclusive conversations you won't find anywhere else, diving deep into their journeys, failures, and
                     success strategies.</p>
             </div>
-
             <div class="grid-card" style="grid-area: box-5;">
                 <img src="./assets/resource.png" alt="Resourse">
                 <h2>Rich Resources</h2>
@@ -127,6 +117,75 @@
             </div>
 
         </div>
+        </div>
+    </section>
+    <section class="bg-color-2">
+        <div class="margin-auto feature-section">
+            <div class="w-75">
+                <h2 class="feature-episodes">Featured Episodes</h2>
+                <div class="episode-card">
+                    <div class="video-card">
+                        <iframe width="560" height="315"
+                            src="https://www.youtube.com/embed/fa8k8IQ1_X0?si=qOzwuxXN2hwDdvjj"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <div class="padding-24px">
+                            <h2 class="video-header">The Future of AI in Everyday Life</h2>
+                            <p class="video-p">Practical strategies for staying productive and maintaining work-life balance in a remote environment.</p>
+                            <div class="video-timing">
+                                <img src="./assets/clock.png" alt="Clock">
+                                <p>16 min</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="video-card">
+                        <iframe width="560" height="315"
+                            src="https://www.youtube.com/embed/0bnxF9YfyFI?si=rN1hDsBbGH13lcp_"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <div class="padding-24px">
+                            <h2 class="video-header">The Future of AI in Everyday Life</h2>
+                            <p class="video-p">Expert advice on navigating your tech career from junior developer to senior leadership roles.</p>
+                            <div class="video-timing">
+                                <img src="./assets/clock.png" alt="Clock">
+                                <p>14 min</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="video-card">
+                        <iframe width="560" height="315"
+                            src="https://www.youtube.com/embed/oX7OduG1YmI?si=ZJVAzwW8KbalCji1"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <div class="padding-24px">
+                            <h2 class="video-header">The Future of AI in Everyday Life</h2>
+                            <p class="video-p">Exploring how artificial intelligence is transforming our daily routines
+                                and
+                                what
+                                to expect in
+                                the next decade.</p>
+                            <div class="video-timing">
+                                <img src="./assets/clock.png" alt="Clock">
+                                <p>42 min</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="w-75">
+                <h2 class="feature-episodes" id="host-header">Meet the Host</h2>
+                <div class="host-box">
+                    <img src="./assets/host.png" alt="">
+                    <div class="host-info">
+                        <h2>Alex Kumar</h2>
+                        <p>Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech industry for over 10 years, working with startups and Fortune 500 companies. Through TechWave, Alex shares insights from industry leaders and practical advice for anyone looking to grow in tech.</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 </body>
