--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
                     <p>Episodes Published</p>
                 </div>
                 <div class="card">
-                    <h1>4.9★</h1>
+                    <div class="flex">
+                        <h1>4.9<span>★</span></h1>
+                    </div>
                     <p>Average Rating</p>
                 </div>
                 <div class="card">
@@ -132,7 +134,8 @@
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         <div class="padding-24px">
                             <h2 class="video-header">The Future of AI in Everyday Life</h2>
-                            <p class="video-p">Practical strategies for staying productive and maintaining work-life balance in a remote environment.</p>
+                            <p class="video-p">Practical strategies for staying productive and maintaining work-life
+                                balance in a remote environment.</p>
                             <div class="video-timing">
                                 <img src="./assets/clock.png" alt="Clock">
                                 <p>16 min</p>
@@ -147,7 +150,8 @@
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         <div class="padding-24px">
                             <h2 class="video-header">The Future of AI in Everyday Life</h2>
-                            <p class="video-p">Expert advice on navigating your tech career from junior developer to senior leadership roles.</p>
+                            <p class="video-p">Expert advice on navigating your tech career from junior developer to
+                                senior leadership roles.</p>
                             <div class="video-timing">
                                 <img src="./assets/clock.png" alt="Clock">
                                 <p>14 min</p>
@@ -182,7 +186,24 @@
                     <img src="./assets/host.png" alt="">
                     <div class="host-info">
                         <h2>Alex Kumar</h2>
-                        <p>Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech industry for over 10 years, working with startups and Fortune 500 companies. Through TechWave, Alex shares insights from industry leaders and practical advice for anyone looking to grow in tech.</p>
+                        <p>Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech
+                            industry for over 10 years, working with startups and Fortune 500 companies. Through
+                            TechWave, Alex shares insights from industry leaders and practical advice for anyone looking
+                            to grow in tech.</p>
+                        <div class="flex">
+                            <div class="social-icon">
+                                <a href="#"><img src="./assets/linkedin.png" alt="linkedin"></a>
+                            </div>
+                            <div class="social-icon">
+                                <a href="#"><img src="./assets/x.png" alt="X"></a>
+                            </div>
+                            <div class="social-icon">
+                                <a href="#"><img src="./assets/instagram.png" alt="X"></a>
+                            </div>
+                            <div class="social-icon">
+                                <a href="#"><img src="./assets/youtube.png" alt="X"></a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
