Primary Level Complite

--- a/index.html
+++ b/index.html
@@ -192,16 +192,16 @@
                             to grow in tech.</p>
                         <div class="flex">
                             <div class="social-icon">
-                                <a href="#"><img src="./assets/linkedin.png" alt="linkedin"></a>
+                                <a href="https://www.linkedin.com/in/sayedhasandipto/"><img src="./assets/linkedin.png" alt="linkedin"></a>
                             </div>
                             <div class="social-icon">
-                                <a href="#"><img src="./assets/x.png" alt="X"></a>
+                                <a href="https://x.com/DiptoHasan46166"><img src="./assets/x.png" alt="X"></a>
                             </div>
                             <div class="social-icon">
-                                <a href="#"><img src="./assets/instagram.png" alt="X"></a>
+                                <a href="https://www.instagram.com/sayedhasandipto/"><img src="./assets/instagram.png" alt="X"></a>
                             </div>
                             <div class="social-icon">
-                                <a href="#"><img src="./assets/youtube.png" alt="X"></a>
+                                <a href="https://www.youtube.com/@SayedHasanDipto"><img src="./assets/youtube.png" alt="X"></a>
                             </div>
                         </div>
                     </div>
@@ -209,6 +209,32 @@
             </div>
         </div>
     </section>
+    <footer>
+        <div class="text-center">
+            <h1>Tech<span class="gradiant-color">Wave</span></h1>
+            <div>
+                <div class="flex-2">
+                    <div class="flex">
+                        <img src="./assets/spotify.png" alt="Spotify">
+                        <h3>Spotify</h3>
+                    </div>
+                    <div class="flex">
+                        <img src="./assets/apple-podcast.png" alt="Apple Podcast">
+                        <h3>Apple Podcast</h3>
+                    </div>
+                    <div class="flex">
+                        <img src="./assets/youtube-podcast.png" alt="YouTube">
+                        <h3>YouTube</h3>
+                    </div>
+                    <div class="flex">
+                        <img src="./assets/twitter.png" alt="Twitter">
+                        <h3>Twitter</h3>
+                    </div>
+                </div>
+                <p class="copy-right">&copy; 2026 TechWave Podcast. All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
