Adding animation in hero section

--- a/index.html
+++ b/index.html
@@ -34,9 +34,20 @@
     </section>
     <section class="hero-container">
         <div class="hero-content">
-            <div class="mic-box btn">
-                <img src="./assets/microphone.png" alt="MicroPhone">
+
+
+            <div class="new">
+                <div class="hero-upr-div">
+                    <h6>NEW</h6>
+                </div>
+                <div class="mic-box btn">
+                    <img src="./assets/microphone.png" alt="MicroPhone">
+                </div>
             </div>
+
+
+
+
             <h1>TechWave</h1>
             <p>Your daily dose of tech insights, productivity hacks, and personal growth</p>
             <div class="hero-buttons">
@@ -192,16 +203,19 @@
                             to grow in tech.</p>
                         <div class="flex">
                             <div class="social-icon">
-                                <a href="https://www.linkedin.com/in/sayedhasandipto/"><img src="./assets/linkedin.png" alt="linkedin"></a>
+                                <a href="https://www.linkedin.com/in/sayedhasandipto/"><img src="./assets/linkedin.png"
+                                        alt="linkedin"></a>
                             </div>
                             <div class="social-icon">
                                 <a href="https://x.com/DiptoHasan46166"><img src="./assets/x.png" alt="X"></a>
                             </div>
                             <div class="social-icon">
-                                <a href="https://www.instagram.com/sayedhasandipto/"><img src="./assets/instagram.png" alt="X"></a>
+                                <a href="https://www.instagram.com/sayedhasandipto/"><img src="./assets/instagram.png"
+                                        alt="X"></a>
                             </div>
                             <div class="social-icon">
-                                <a href="https://www.youtube.com/@SayedHasanDipto"><img src="./assets/youtube.png" alt="X"></a>
+                                <a href="https://www.youtube.com/@SayedHasanDipto"><img src="./assets/youtube.png"
+                                        alt="X"></a>
                             </div>
                         </div>
                     </div>
