--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 <h2 class="feature-episodes">Featured Episodes</h2>
                 <div class="episode-card">
                     <div class="video-card">
-                        <iframe width="560" height="315"
+                        <iframe width="100%" height="315"
                             src="https://www.youtube.com/embed/fa8k8IQ1_X0?si=qOzwuxXN2hwDdvjj"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -154,7 +154,7 @@
                         </div>
                     </div>
                     <div class="video-card">
-                        <iframe width="560" height="315"
+                        <iframe width="100%" height="315"
                             src="https://www.youtube.com/embed/0bnxF9YfyFI?si=rN1hDsBbGH13lcp_"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -170,7 +170,7 @@
                         </div>
                     </div>
                     <div class="video-card">
-                        <iframe width="560" height="315"
+                        <iframe width="100%" height="315"
                             src="https://www.youtube.com/embed/oX7OduG1YmI?si=ZJVAzwW8KbalCji1"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
