--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         <div class="padding-24px">
                             <h2 class="video-header">The Future of AI in Everyday Life</h2>
-                            <p class="video-p">Practical strategies for staying productive and maintaining work-life
-                                balance in a remote environment.</p>
+                            <p class="video-p">Exploring how artificial intelligence is transforming our daily routines
+                                and what to expect in the next decade.</p>
                             <div class="video-timing">
                                 <img src="./assets/clock.png" alt="Clock">
                                 <p>16 min</p>
@@ -154,15 +154,17 @@
                         </div>
                     </div>
                     <div class="video-card">
-                        <iframe width="100%" height="315"
-                            src="https://www.youtube.com/embed/0bnxF9YfyFI?si=rN1hDsBbGH13lcp_"
-                            title="YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <div>
+                            <iframe width="100%" height="315"
+                                src="https://www.youtube.com/embed/0bnxF9YfyFI?si=rN1hDsBbGH13lcp_"
+                                title="YouTube video player" frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        </div>
                         <div class="padding-24px">
-                            <h2 class="video-header">The Future of AI in Everyday Life</h2>
-                            <p class="video-p">Expert advice on navigating your tech career from junior developer to
-                                senior leadership roles.</p>
+                            <h2 class="video-header">Building Better Habits for Remote Work</h2>
+                            <p class="video-p">Practical strategies for staying productive and maintaining work-life
+                                balance in a remote environment.</p>
                             <div class="video-timing">
                                 <img src="./assets/clock.png" alt="Clock">
                                 <p>14 min</p>
@@ -176,12 +178,9 @@
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         <div class="padding-24px">
-                            <h2 class="video-header">The Future of AI in Everyday Life</h2>
-                            <p class="video-p">Exploring how artificial intelligence is transforming our daily routines
-                                and
-                                what
-                                to expect in
-                                the next decade.</p>
+                            <h2 class="video-header">Career Growth in Tech: A Roadmap</h2>
+                            <p class="video-p">Expert advice on navigating your tech <br> career from junior developer to
+                                senior <br> leadership roles.</p>
                             <div class="video-timing">
                                 <img src="./assets/clock.png" alt="Clock">
                                 <p>42 min</p>
