Finish the projects with some bugs

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
                     <li><a href="#">Episodes</a></li>
                     <li><a href="#">Host</a></li>
                 </ul>
-                <button class="btn">Subscribe <i class="fa-solid fa-arrow-right"></i></button>
+                <button class="btn"><a href="#" target="_blank">Subscribe <i
+                            class="fa-solid fa-arrow-right"></i></a></button>
                 <div class="hamburger-menu">
                     <img src="./assets/hamburger-menu.png" alt="hamburger-menu">
                 </div>
@@ -52,10 +53,12 @@
             <p>Your daily dose of tech insights, productivity hacks, and personal growth</p>
             <div class="hero-buttons">
                 <button class="btn">
-                    <i class="fa-brands fa-spotify"></i> Listen on Spotify
+                    <a href="https://open.spotify.com/" target="_blank">
+                        <i class="fa-brands fa-spotify"></i> Listen on Spotify
+                    </a>
                 </button>
                 <button class="snd-button">
-                    <i class="fa-regular fa-envelope"></i> Subscribe
+                    <a href="#"><i class="fa-regular fa-envelope"></i> Subscribe</a>
                 </button>
             </div>
         </div>
@@ -179,7 +182,8 @@
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         <div class="padding-24px">
                             <h2 class="video-header">Career Growth in Tech: A Roadmap</h2>
-                            <p class="video-p">Expert advice on navigating your tech <br> career from junior developer to
+                            <p class="video-p">Expert advice on navigating your tech <br> career from junior developer
+                                to
                                 senior <br> leadership roles.</p>
                             <div class="video-timing">
                                 <img src="./assets/clock.png" alt="Clock">
@@ -202,19 +206,20 @@
                             to grow in tech.</p>
                         <div class="flex">
                             <div class="social-icon">
-                                <a href="https://www.linkedin.com/in/sayedhasandipto/"><img src="./assets/linkedin.png"
-                                        alt="linkedin"></a>
+                                <a href="https://www.linkedin.com/in/sayedhasandipto/" target="_blank"><img
+                                        src="./assets/linkedin.png" alt="linkedin"></a>
                             </div>
                             <div class="social-icon">
-                                <a href="https://x.com/DiptoHasan46166"><img src="./assets/x.png" alt="X"></a>
-                            </div>
-                            <div class="social-icon">
-                                <a href="https://www.instagram.com/sayedhasandipto/"><img src="./assets/instagram.png"
+                                <a href="https://x.com/DiptoHasan46166" target="_blank"><img src="./assets/x.png"
                                         alt="X"></a>
                             </div>
                             <div class="social-icon">
-                                <a href="https://www.youtube.com/@SayedHasanDipto"><img src="./assets/youtube.png"
-                                        alt="X"></a>
+                                <a href="https://www.instagram.com/sayedhasandipto/" target="_blank"><img
+                                        src="./assets/instagram.png" alt="X"></a>
+                            </div>
+                            <div class="social-icon">
+                                <a href="https://www.youtube.com/@SayedHasanDipto" target="_blank"><img
+                                        src="./assets/youtube.png" alt="X"></a>
                             </div>
                         </div>
                     </div>
@@ -228,20 +233,28 @@
             <div>
                 <div class="flex-2">
                     <div class="flex">
-                        <img src="./assets/spotify.png" alt="Spotify">
-                        <h3>Spotify</h3>
+                        <a href="https://open.spotify.com/" target="_blank" class="social-icon-a">
+                            <img src="./assets/spotify.png" alt="Spotify">
+                            <h3>Spotify</h3>
+                        </a>
                     </div>
                     <div class="flex">
-                        <img src="./assets/apple-podcast.png" alt="Apple Podcast">
-                        <h3>Apple Podcast</h3>
+                        <a href="https://podcasts.apple.com/us/new" target="_blank" class="social-icon-a">
+                            <img src="./assets/apple-podcast.png" alt="Apple Podcast">
+                            <h3>Apple Podcast</h3>
+                        </a>
                     </div>
                     <div class="flex">
-                        <img src="./assets/youtube-podcast.png" alt="YouTube">
-                        <h3>YouTube</h3>
+                        <a href="https://www.youtube.com/@SayedHasanDipto" target="_blank" class="social-icon-a">
+                            <img src="./assets/youtube-podcast.png" alt="YouTube">
+                            <h3>YouTube</h3>
+                        </a>
                     </div>
                     <div class="flex">
-                        <img src="./assets/twitter.png" alt="Twitter">
-                        <h3>Twitter</h3>
+                        <a href="https://x.com/DiptoHasan46166" target="_blank" class="social-icon-a">
+                            <img src="./assets/twitter.png" alt="Twitter">
+                            <h3>Twitter</h3>
+                        </a>
                     </div>
                 </div>
                 <p class="copy-right">&copy; 2026 TechWave Podcast. All rights reserved.</p>
