Allhamdurillah after 14 hour of work, finally it is finish.

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     </section>
     <section class="bg-color-2">
         <div class="margin-auto feature-section">
-            <div class="w-75">
+            <div class="w-75" id="w-74">
                 <h2 class="feature-episodes">Featured Episodes</h2>
                 <div class="episode-card">
                     <div class="video-card">
