--- a/index.html
+++ b/index.html
@@ -198,9 +198,9 @@
             <div class="w-75">
                 <h2 class="feature-episodes" id="host-header">Meet the Host</h2>
                 <div class="host-box">
-                    <img src="./assets/host.png" alt="">
+                    <img src="./assets/host.png" alt="Host Imeage" class="host-img">
                     <div class="host-info">
-                        <h2>Alex Kumar</h2>
+                        <h2>Sayed Hasan Dipto</h2>
                         <p>Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech
                             industry for over 10 years, working with startups and Fortune 500 companies. Through
                             TechWave, Alex shares insights from industry leaders and practical advice for anyone looking
