Add responsive width to host img

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                 <div class="host-box">
                     <img src="./assets/host.png" alt="Host Imeage" class="host-img">
                     <div class="host-info">
-                        <h2>Sayed Hasan Dipto</h2>
+                        <h2 class="host-name">Sayed Hasan Dipto</h2>
                         <p>Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech
                             industry for over 10 years, working with startups and Fortune 500 companies. Through
                             TechWave, Alex shares insights from industry leaders and practical advice for anyone looking
