--- a/index.html
+++ b/index.html
@@ -235,25 +235,25 @@
                 <div class="flex-2">
                     <div class="flex">
                         <a href="https://open.spotify.com/" target="_blank" class="social-icon-a">
-                            <img src="./assets/spotify.png" alt="Spotify">
+                            <img src="./assets/spotify.png" alt="Spoti">
                             <h3>Spotify</h3>
                         </a>
                     </div>
                     <div class="flex">
                         <a href="https://podcasts.apple.com/us/new" target="_blank" class="social-icon-a">
-                            <img src="./assets/apple-podcast.png" alt="Apple Podcast">
+                            <img src="./assets/apple-podcast.png" alt="ApplePod">
                             <h3>Apple Podcast</h3>
                         </a>
                     </div>
                     <div class="flex">
                         <a href="https://www.youtube.com/@SayedHasanDipto" target="_blank" class="social-icon-a">
-                            <img src="./assets/youtube-podcast.png" alt="YouTube">
+                            <img src="./assets/youtube-podcast.png" alt="YT>
                             <h3>YouTube</h3>
                         </a>
                     </div>
                     <div class="flex">
                         <a href="https://x.com/DiptoHasan46166" target="_blank" class="social-icon-a">
-                            <img src="./assets/twitter.png" alt="Twitter">
+                            <img src="./assets/twitter.png" alt="Twit">
                             <h3>Twitter</h3>
                         </a>
                     </div>
