Adding Youtube links

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                     </div>
                     <div class="flex">
                         <a href="https://www.youtube.com/@SayedHasanDipto" target="_blank" class="social-icon-a">
-                            <img src="./assets/youtube-podcast.png" alt="YT>
+                            <img src="./assets/youtube-podcast.png" alt="YT">
                             <h3>YouTube</h3>
                         </a>
                     </div>
